--- a/src/Layout/index.scss
+++ b/src/Layout/index.scss
@@ -17,6 +17,14 @@
   border-left: 1px solid gray;
   background-color: var(--primary-color);
   color: var(--light-color);
+  .ico {
+    $width: 80px;
+    width: $width;
+    height: $width;
+    background-image: url("../assets/uex.ico");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 }
 
 .layout-nav {
