feat：繁体简体翻译

--- a/src/pages/ColumnsI18next/index.scss
+++ b/src/pages/ColumnsI18next/index.scss
@@ -10,6 +10,10 @@
     color: var(--light-color);
     word-break: break-all;
   }
+
+  .p-tabview-panels {
+    padding: 0;
+  }
 }
 
 .page-ColumnsI18next-drawer {
