--- a/src/pages/ColumnsI18next/index.scss
+++ b/src/pages/ColumnsI18next/index.scss
@@ -14,6 +14,14 @@
   .p-tabview-panels {
     padding: 0 !important;
   }
+
+  .update-mark{
+    color: rgb(78, 95, 187);
+    cursor: pointer;
+    &:hover{
+      color: rgb(22, 60, 79); 
+    }
+  }
 }
 
 .page-ColumnsI18next-drawer {
@@ -36,5 +44,15 @@
         font-weight: bold;
       }
     }
+  }
+}
+
+.page-ColumnsI18next-dialog{
+  h4 span{
+    font-weight: normal;
+    color: gray;
+  }
+  ul{
+    padding: 18px;
   }
 }
