--- a/src/pages/ColumnsI18next/index.scss
+++ b/src/pages/ColumnsI18next/index.scss
@@ -22,6 +22,10 @@
       color: rgb(22, 60, 79); 
     }
   }
+
+  .toolbar{
+    justify-content: space-between;
+  }
 }
 
 .page-ColumnsI18next-drawer {
