--- a/src/pages/ColumnsI18next/index.scss
+++ b/src/pages/ColumnsI18next/index.scss
@@ -1,5 +1,8 @@
 .page-ColumnsI18next {
   padding: 8px;
+  .hidden{
+    display: none;
+  }
 
   .out-put {
     margin-top: 8px;
@@ -25,6 +28,11 @@
 
   .toolbar{
     justify-content: space-between;
+  }
+
+  .p-button.p-component.p-highlight{
+    background-color: rgb(63, 81, 181);
+    color: #fff;
   }
 }
 
