feat:primereact中文适配 feat:debug模式增加搜索

--- a/src/pages/ColumnsI18next/index.scss
+++ b/src/pages/ColumnsI18next/index.scss
@@ -34,6 +34,11 @@
     background-color: rgb(63, 81, 181);
     color: #fff;
   }
+
+  .total{
+    font-weight: bold;
+    letter-spacing: 4px;
+  }
 }
 
 .page-ColumnsI18next-drawer {
